--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -12,7 +12,7 @@ CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_GENERIC_CLOCKEVENTS_BROADCAST=y
 CONFIG_KTIME_SCALAR=y
 CONFIG_HAVE_PROC_CPU=y
-# CONFIG_STACKTRACE_SUPPORT is not set
+CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
@@ -69,9 +69,9 @@ CONFIG_GENERIC_IRQ_CHIP=y
 #
 # RCU Subsystem
 #
-CONFIG_TREE_RCU=y
-# CONFIG_TREE_PREEMPT_RCU is not set
-# CONFIG_PREEMPT_RCU is not set
+# CONFIG_TREE_RCU is not set
+CONFIG_TREE_PREEMPT_RCU=y
+CONFIG_PREEMPT_RCU=y
 # CONFIG_RCU_TRACE is not set
 CONFIG_RCU_FANOUT=32
 # CONFIG_RCU_FANOUT_EXACT is not set
@@ -138,9 +138,9 @@ CONFIG_COMPAT_BRK=y
 # CONFIG_SLUB is not set
 CONFIG_SLQB=y
 # CONFIG_SLOB is not set
-CONFIG_PROFILING=y
+# CONFIG_PROFILING=y
 # CONFIG_OPROFILE is not set
-# CONFIG_HAVE_OPROFILE is not set
+CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -1703,8 +1703,8 @@ CONFIG_PVR_SGX=y
 CONFIG_PVR_SGXCORE_540=y
 CONFIG_PVR_BUILD_RELEASE=y
 # CONFIG_PVR_BUILD_DEBUG is not set
-CONFIG_PVR_NEED_PVR_DPF=y
-CONFIG_PVR_NEED_PVR_ASSERT=y
+# CONFIG_PVR_NEED_PVR_DPF is not set
+# CONFIG_PVR_NEED_PVR_ASSERT is not set
 CONFIG_PVR_PERCONTEXT_PB=y
 CONFIG_PVR_ACTIVE_POWER_MANAGEMENT=y
 CONFIG_PVR_ACTIVE_POWER_LATENCY_MS=100
@@ -2481,7 +2481,7 @@ CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=1024
-# CONFIG_MAGIC_SYSRQ is not set
+CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_DEBUG_FS=y
