--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -323,6 +323,7 @@ CONFIG_OMAP_TPS6236X=y
 CONFIG_OMAP_ALLOW_OSWR=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_OMAP4_PPA_CPU1_ONLINE_BUG=n
 
 #
 # System MMU
