--- a/arch/arm/configs/popcorn_defconfig
+++ b/arch/arm/configs/popcorn_defconfig
@@ -501,6 +501,7 @@ CONFIG_CPU_FREQ_GOV_GALLIMAUFRY=y
 CONFIG_CPU_FREQ_GOV_GALLIMAUFRYX=y
 CONFIG_CPU_FREQ_GOV_AGGRESSIVE=y
 CONFIG_CPU_FREQ_GOV_AGGRESSIVEX=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
